# CppMovieDB

./: CMakeLists.txt  Movie.cpp  Movie.h  MovieDB.cpp  MovieDB.h  Rating.cpp  Rating.h  Ratings.cpp  Ratings.h  TimeCode.cpp  TimeCode.h  main  main.cpp  makefile
